fixed padding and margin issue showed on mobile

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ body {
 
 .contents-popup > .contents {
     position:fixed;
-    padding: 5% 10% 5% 10%;
+    padding: 4% 5% 4% 5%;
     margin:0;
     top:0;
     left:0;
@@ -232,7 +232,7 @@ body {
     position: relative;
     background-color: white;
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
-    padding: 20px;
+    padding: 15px;
 }
 
 .contents-body > p > img {
